Change fixed body to overflow hidden to prevent layout shift when modal opens

--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -10,7 +10,8 @@ body {
 }
 
 body.fixed {
-  position: fixed;
+  // position: fixed;
+  overflow: hidden;
 }
 
 h1 {
